samples/_failures_safe/1761603138_dda568_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8ba33645.c: In function ‘main’:
./samples/SAFE/__tmp_8ba33645.c:177:13: error: expected ‘;’ at end of input
  177 |         free
      |             ^
      |             ;
./samples/SAFE/__tmp_8ba33645.c:177:9: error: expected declaration or statement at end of input
  177 |         free
      |         ^~~~
./samples/SAFE/__tmp_8ba33645.c:177:9: error: expected declaration or statement at end of input
